--- a/src/main/resources/templates/distance-conversion.html
+++ b/src/main/resources/templates/distance-conversion.html
@@ -2,37 +2,46 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${title}"></title>
+    <title>Distance-conversion</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
 </head>
+
 <body>
 <form action="#" th:action="@{/convert}" th:object="${distance}" method="Post">
 
+    <div style="text-align: center;color: darkred" th:if="${error !=null }" >
+        Error:
+        <span  th:text="${error}"></span>
+
+    </div>
 
     <div class="container">
         <div class="form-group ">
             <label for="quantity">Quantity:</label>
-            <input type="text" class="form-control" id="quantity" required="true" th:field="*{quantity}">
+            <input type="number" class="form-control" id="quantity"  step="any" required="true" th:field="*{quantity}">
         </div>
+
 
         <div class="dropdown">
             <div class="form-group blu-margin">
-                <label for="quantity">From Unit:</label>
-                <select class="form-control" th:field="*{fromUnit}"  id="dropOperator"  required="true">
-                    <option th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
+                <label for="fromUnit">From Unit:</label>
+                <select class="form-control" th:field="*{fromUnit}"  id="fromUnit"  required="true"  >
+                    <option th:each="unit : ${allUnits}"  th:value="${unit}" th:text="${unit.name}"></option>
                 </select>
             </div>
         </div>
 
+
+
         <div class="dropdown">
             <div class="form-group blu-margin">
-                <label for="quantity">To Unit:</label>
-                <select class="form-control" th:field="*{toUnit}"  required="true" >
-                    <option th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
+                <label for="toUnit">To Unit:</label>
+                <select class="form-control" th:field="*{toUnit}" id="toUnit" required="true"  >
+                    <option  th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
                 </select>
             </div>
         </div>
