--- a/src/main/resources/templates/distance-conversion.html
+++ b/src/main/resources/templates/distance-conversion.html
@@ -9,30 +9,39 @@
 
 
 </head>
+
 <body>
 <form action="#" th:action="@{/convert}" th:object="${distance}" method="Post">
 
+    <div style="text-align: center;color: darkred" th:if="${error !=null }" >
+        Error:
+        <span  th:text="${error}"></span>
+
+    </div>
 
     <div class="container">
         <div class="form-group ">
             <label for="quantity">Quantity:</label>
-            <input type="text" class="form-control" id="quantity" required="true" th:field="*{quantity}">
+            <input type="number" class="form-control" id="quantity" required="true" th:field="*{quantity}">
         </div>
+
 
         <div class="dropdown">
             <div class="form-group blu-margin">
-                <label for="quantity">From Unit:</label>
-                <select class="form-control" th:field="*{fromUnit}"  id="dropOperator"  required="true">
-                    <option th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
+                <label for="fromUnit">From Unit:</label>
+                <select class="form-control" th:field="*{fromUnit}"  id="fromUnit"  required="true"  >
+                    <option th:each="unit : ${allUnits}"  th:value="${unit}" th:text="${unit.name}"></option>
                 </select>
             </div>
         </div>
 
+
+
         <div class="dropdown">
             <div class="form-group blu-margin">
-                <label for="quantity">To Unit:</label>
-                <select class="form-control" th:field="*{toUnit}"  required="true" >
-                    <option th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
+                <label for="toUnit">To Unit:</label>
+                <select class="form-control" th:field="*{toUnit}" id="toUnit" required="true"  >
+                    <option  th:each="unit : ${allUnits}" th:value="${unit}" th:text="${unit.name}"></option>
                 </select>
             </div>
         </div>
